hamburgers are added

--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,3 +1,17 @@
+body
+  font-size: $s-18
+  color: $font-color
+  font-family: $gilroy-reg
+  margin: 0
+  background: #FFFFFF
+*
+  box-sizing: border-box
+  
+
+.wrapper 
+  position: relative
+  min-height: 100%
+  overflow: hidden
 .container
   max-width: 51.25rem
   margin: 0 auto
@@ -5,7 +19,13 @@
 .nav-container
   max-width: 73.4375rem
 .flex
+  align-items: center
   display: flex
+.mr-auto
+  margin-right: auto
+.ml-auto
+  margin-left: auto
+.m-0
 
 
 a
