--- a/sass/_mixin.sass
+++ b/sass/_mixin.sass
@@ -1,5 +1,5 @@
 @mixin media( $width )
-  @media screen and (min-width: $width)
+  @media screen and (max-width: $width)
     @content
 @mixin flex($dir:null, $items:null, $jus:null)
   display: flex
