--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,16 @@
+@import fonts.scss
 @import settings
 @import mixin
+@import main
 @import buttons
+
+
+
+$hamburger-types: (collapse)
+$hamburger-layer-color: $font-color
+$hamburger-active-layer-color: $font-color
+$hamburger-padding-x: 0 !default
+@import ../node_modules/hamburgers/_sass/hamburgers/hamburgers.scss
+
+
 @import header
-@import font
