--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,5 +8,5 @@ $s-22: 1.375rem
 $s-18: 1.125rem
 $s-35: 2.1875rem
 
-$gilrou-reg: 'Gilroy'
-$gilroo-bold: 'Gilroy-Bold'
+$gilroy-reg: 'Gilroy'
+$gilroy-bold: 'Gilroy-Bold'
