little changes to header__content

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -47,7 +47,12 @@ $gilroy-reg: 'Gilroy'
     @include media(992px)
       display: none
 .header__links
-  flex-wrap: wrap-reverse
+  flex-wrap: wrap
+  
+.header__m
+  @include media(350px)
+    margin: 0 auto
+
 
 
 
