--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-       url('../fonts/Gilroy-Medium.woff') format('woff');
+       url('../font/Gilroy-Medium.woff') format('woff');
 }
 @font-face {
   font-family: 'Gilroy-Bold';
