pre-last-changes

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -17,6 +17,8 @@
     margin: 0 auto
   @include media(440px)
     padding-left: 0.625rem
+  @include media(400px)
+    margin-top: 1rem
 .header__logo
   @include media(440px)
     padding-right: 0.625rem
@@ -26,6 +28,9 @@
 
 
 //HEADER__CONTENT
+.unus
+  @include media(992px)
+    display: block
 .header__content
   padding: 4.2rem 0
 .header__info-main
@@ -50,7 +55,7 @@
   flex-wrap: wrap
   
 .header__m
-  @include media(350px)
+  @include media(370px)
     margin: 0 auto
 
 
