--- a/sass/_mixin.sass
+++ b/sass/_mixin.sass
@@ -6,9 +6,8 @@
   flex-direction: $dir
   align-items: $items
   justify-content: $jus
-@mixin grid($dir:null, $items:null, $col:null, $gap:null)
+@mixin grid($items:null, $col:null, $gap:null)
   display: grid
-  flex-direction: $dir
   align-items: $items
   grid-template-columns: $col
   grid-gap: $gap
